fix margin to align comments on show page and other alignment issues

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -26,7 +26,7 @@ ul.article-links li {
 
 .article-list {
   margin: auto;
-  max-width: 85%;
+  max-width: 90%;
 }
 
 .article-list a {
@@ -71,16 +71,14 @@ ul.article-links li {
   background-color: #efefef;
   margin: auto;
   padding: 1%;
-  width: 50%;
+  width: 75%;
 }
 
 #article_title {
-  background-color: #eee;
   width: 50%;
 }
 
 #article_text {
-  background-color: #eee;
   height: 200px;
   width: 70%;
 }
@@ -88,5 +86,6 @@ ul.article-links li {
 .article-form-submit input {
   background-color: #0d355a;
   border-radius: 5px;
-  color: #00b0ff;
+  color: #e7e7e7;
+  padding: 1%;
 }
