--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -26,6 +26,7 @@ body {
 
 .comment-form {
   margin: auto;
+  padding: 3%;
 }
 
 .comment-form-commenter input {
@@ -33,7 +34,7 @@ body {
 }
 
 #comment_body {
-  height: 200px;
+  height: 150px;
   width: 75%;
 }
 
@@ -41,4 +42,5 @@ body {
   background-color: #0d355a;
   border-radius: 5px;
   color: #e7e7e7;
+  padding: 1%;
 }
