--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -9,7 +9,7 @@
   max-width: 85%;
 }
 
-.header {
+header {
   clear: both;
   margin: auto;
   max-width: 85%;
